fix: wrong gapcursor visibility (#2072)

--- a/projects/editor/components/editor-socket/styles/details.less
+++ b/projects/editor/components/editor-socket/styles/details.less
@@ -118,8 +118,9 @@ div[data-type='details-content'] {
     display: flex;
 }
 
-details:not(:last-child) {
-    margin-block-end: 1rem;
+details + details,
+.t-details-wrapper + .t-details-wrapper {
+    margin-block-start: 1rem;
 }
 
 details[open] > summary::after,
